   tests/test-data/simple-genome.fa, tests/test_nodegraph.py: added functions
   'find_high_degree_nodes' and 'traverse_linear_path' to hashtables/graphs.
   * lib/kmer_hash.cc: minor change to use object member _seq instead of
   constructor argument seq in KmerIterator.
   * lib/kmer_hash.hh: added const to Kmer::get_string_rep(...) signature.
   * sandbox/{extract-compact-dbg.py, graph_writer.py}: new sandbox script to
   extract compact De Bruijn graphs (that contract linear paths).

2016-05-25  Titus Brown  <titus@idyll.org>

   * scripts/trim-low-abund.py: switched to watermark-based reporting to
   isolate a hard-to-trigger undefined variable error in reporting.
   * tests/test_scripts.py: added a test for basic reporting functionality.

2016-05-16  Titus Brown  <titus@idyll.org>

   * khmer/_khmer.cc: define new khmer_HashSet_Type and khmer_HashSet_Object;
   lots of associated cleanup of k-mer <-> C++ interface; added
   Hashtable::neighbors; added Hashtable::hash and Hashtable::reverse_hash;
   CPython 'hashtable.count(...)' function now takes either hash or string.
   * lib/{kmer_hash.cc, kmer_hash.hh}: added some function overloads so that
   _hash(...) could take strings as arguments without conversion; added
   Kmer::set_from_unique_hash convenience function.
   * lib/{hashtable.cc, hashtable.hh}: minor cleanup;
   * lib/{read_aligner.cc, subset.cc}: minor refactoring.
   * lib/{traversal.cc, traversal.hh}: made 'filter' argument to traverse*
   functions optional; added 'traverse' function for combine traversal.
   * tests/test_hashset.py: tests for new HashSet class.
   * tests/test_countgraph.py: tests for new hash/reverse_hash functions,
   and 'count' behavior.
   * tests/test_nodegraph.py: tests for new neighbors function.
   * khmer/__init__.py: import new HashSet type from _khmer.
   * scripts/{do-partition.py, make-initial-stoptags.py,
   partition-graph.py},tests/{test_labelhash.py, test_subset_graph.py}: